--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,22 +6,22 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.bottomnavigation.fragments.HomeFragment"
+        android:name="com.example.bottomnavigation.client.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/historyFragment"
-        android:name="com.example.bottomnavigation.fragments.HistoryFragment"
+        android:name="com.example.bottomnavigation.client.fragments.HistoryFragment"
         android:label="fragment_history"
         tools:layout="@layout/fragment_history" />
     <fragment
         android:id="@+id/notificationFragment"
-        android:name="com.example.bottomnavigation.fragments.NotificationFragment"
+        android:name="com.example.bottomnavigation.client.fragments.NotificationFragment"
         android:label="fragment_notification"
         tools:layout="@layout/fragment_notification" />
     <fragment
         android:id="@+id/postFragment"
-        android:name="com.example.bottomnavigation.fragments.PostFragment"
+        android:name="com.example.bottomnavigation.client.fragments.PostFragment"
         android:label="fragment_post"
         tools:layout="@layout/fragment_post" >
         <action
