--- a/app/src/main/res/layout/activity_contractor_main.xml
+++ b/app/src/main/res/layout/activity_contractor_main.xml
@@ -5,16 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".contractor.ContractorMainActivity">
-    <TextView
-        android:layout_width="wrap_content"
+
+
+
+    <fragment
+        android:id="@+id/hostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btmNavCon"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/contractor_nav_graph"
+        tools:layout_editor_absoluteX="1dp" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/btmNavCon"
+        app:itemIconTint="@drawable/bottom_item_color_contractor"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="@dimen/_23ssp"
-        android:text="contractor"
+        app:menu="@menu/contractor_bottom_nav"
 
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
