--- a/app/src/main/res/menu/contractor_bottom_nav.xml
+++ b/app/src/main/res/menu/contractor_bottom_nav.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+
+    <item
+        android:id="@+id/homeFragment3"
+        android:title="@string/home"
+        android:icon="@drawable/ic_baseline_home_24"
+        />
+
+    <item
+        android:title="Chat"
+        android:icon="@drawable/ic_baseline_chat_24"
+        android:id="@+id/chatFragment2"
+        />
+    <item
+        android:title="History"
+        android:icon="@drawable/ic_baseline_history_24"
+        android:id="@+id/historyFragment3"
+        />
 </menu>
